add logout endpoint
